Add testimonials section

--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
           <h2>Avis des patients</h2>
         </div>
 
+        <div class="testimony">
         <div class="customer__container flex ">
           <div class="customer__card">
             <div class="customer__card-profile">
@@ -273,7 +274,7 @@
                 <img src="" alt="">
               </div>
               <div class="customer__card-id">
-                <h4>John Doe</h4>
+                <h4>John Doe 1</h4>
                 <p>Lorem, ipsum dolor.</p>
               </div>
             </div>
@@ -289,7 +290,75 @@
                 <img src="" alt="">
               </div>
               <div class="customer__card-id">
+                <h4>John Doe 2</h4>
+                <p>Lorem, ipsum dolor.</p>
+              </div>
+            </div>
+            <div class="customer__card-quote">
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, nulla corporis voluptatibus temporibus
+                nihil ad!
+                Nesciunt hic tempore quas molestias.</p>
+            </div>
+          </div>
+
+          <div class="customer__card">
+            <div class="customer__card-profile">
+              <div class="customer__card-img">
+                <img src="" alt="">
+              </div>
+              <div class="customer__card-id">
+                <h4>John Doe 3</h4>
+                <p>Lorem, ipsum dolor.</p>
+              </div>
+            </div>
+            <div class="customer__card-quote">
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, nulla corporis voluptatibus temporibus
+                nihil ad!
+                Nesciunt hic tempore quas molestias.</p>
+            </div>
+          </div>
+
+          <div class="customer__card">
+            <div class="customer__card-profile">
+              <div class="customer__card-img">
+                <img src="" alt="">
+              </div>
+              <div class="customer__card-id">
+                <h4>John Doe 4</h4>
+                <p>Lorem, ipsum dolor.</p>
+              </div>
+            </div>
+            <div class="customer__card-quote">
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, nulla corporis voluptatibus temporibus
+                nihil ad!
+                Nesciunt hic tempore quas molestias.</p>
+            </div>
+          </div>
+
+          <div class="customer__card">
+            <div class="customer__card-profile">
+              <div class="customer__card-img">
+                <img src="" alt="">
+              </div>
+              <div class="customer__card-id">
                 <h4>John Doe</h4>
+                <p>Lorem, ipsum dolor.</p>
+              </div>
+            </div>
+            <div class="customer__card-quote">
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, nulla corporis voluptatibus temporibus
+                nihil ad!
+                Nesciunt hic tempore quas molestias.</p>
+            </div>
+          </div>
+
+          <div class="customer__card">
+            <div class="customer__card-profile">
+              <div class="customer__card-img">
+                <img src="" alt="">
+              </div>
+              <div class="customer__card-id">
+                <h4>Jane Doe</h4>
                 <p>Lorem, ipsum dolor.</p>
               </div>
             </div>
@@ -334,22 +403,7 @@
             </div>
           </div>
 
-          <div class="customer__card">
-            <div class="customer__card-profile">
-              <div class="customer__card-img">
-                <img src="" alt="">
-              </div>
-              <div class="customer__card-id">
-                <h4>John Doe</h4>
-                <p>Lorem, ipsum dolor.</p>
-              </div>
-            </div>
-            <div class="customer__card-quote">
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, nulla corporis voluptatibus temporibus
-                nihil ad!
-                Nesciunt hic tempore quas molestias.</p>
-            </div>
-          </div>
+        </div>
         </div>
 
         <div class="hero__slide-btn-container flex customer__card-btn">
