Fix some styling

--- a/index.html
+++ b/index.html
@@ -267,143 +267,151 @@
         </div>
 
         <div class="testimony">
-        <div class="customer__container flex ">
-          <div class="customer__card">
-            <div class="customer__card-profile">
-              <div class="customer__card-img">
-                <img src="" alt="">
+          <div class="customer__container flex " id="customer__scroll">
+            <div class="customer__card">
+              <div class="customer__card-profile">
+                <div class="customer__card-img">
+                  <img src="" alt="">
+                </div>
+                <div class="customer__card-id">
+                  <h4>John Doe 1</h4>
+                  <p>Lorem, ipsum dolor.</p>
+                </div>
               </div>
-              <div class="customer__card-id">
-                <h4>John Doe 1</h4>
-                <p>Lorem, ipsum dolor.</p>
+              <div class="customer__card-quote">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, nulla corporis voluptatibus
+                  temporibus
+                  nihil ad! Nesciunt hic tempore quas molestias.</p>
               </div>
             </div>
-            <div class="customer__card-quote">
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, nulla corporis voluptatibus temporibus
-                nihil ad! Nesciunt hic tempore quas molestias.</p>
-            </div>
-          </div>
 
-          <div class="customer__card">
-            <div class="customer__card-profile">
-              <div class="customer__card-img">
-                <img src="" alt="">
+            <div class="customer__card">
+              <div class="customer__card-profile">
+                <div class="customer__card-img">
+                  <img src="" alt="">
+                </div>
+                <div class="customer__card-id">
+                  <h4>John Doe 2</h4>
+                  <p>Lorem, ipsum dolor.</p>
+                </div>
               </div>
-              <div class="customer__card-id">
-                <h4>John Doe 2</h4>
-                <p>Lorem, ipsum dolor.</p>
+              <div class="customer__card-quote">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, nulla corporis voluptatibus
+                  temporibus
+                  nihil ad!
+                  Nesciunt hic tempore quas molestias.</p>
               </div>
             </div>
-            <div class="customer__card-quote">
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, nulla corporis voluptatibus temporibus
-                nihil ad!
-                Nesciunt hic tempore quas molestias.</p>
-            </div>
-          </div>
 
-          <div class="customer__card">
-            <div class="customer__card-profile">
-              <div class="customer__card-img">
-                <img src="" alt="">
+            <div class="customer__card">
+              <div class="customer__card-profile">
+                <div class="customer__card-img">
+                  <img src="" alt="">
+                </div>
+                <div class="customer__card-id">
+                  <h4>John Doe 3</h4>
+                  <p>Lorem, ipsum dolor.</p>
+                </div>
               </div>
-              <div class="customer__card-id">
-                <h4>John Doe 3</h4>
-                <p>Lorem, ipsum dolor.</p>
+              <div class="customer__card-quote">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, nulla corporis voluptatibus
+                  temporibus
+                  nihil ad!
+                  Nesciunt hic tempore quas molestias.</p>
               </div>
             </div>
-            <div class="customer__card-quote">
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, nulla corporis voluptatibus temporibus
-                nihil ad!
-                Nesciunt hic tempore quas molestias.</p>
-            </div>
-          </div>
 
-          <div class="customer__card">
-            <div class="customer__card-profile">
-              <div class="customer__card-img">
-                <img src="" alt="">
+            <div class="customer__card">
+              <div class="customer__card-profile">
+                <div class="customer__card-img">
+                  <img src="" alt="">
+                </div>
+                <div class="customer__card-id">
+                  <h4>John Doe 4</h4>
+                  <p>Lorem, ipsum dolor.</p>
+                </div>
               </div>
-              <div class="customer__card-id">
-                <h4>John Doe 4</h4>
-                <p>Lorem, ipsum dolor.</p>
+              <div class="customer__card-quote">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, nulla corporis voluptatibus
+                  temporibus
+                  nihil ad!
+                  Nesciunt hic tempore quas molestias.</p>
               </div>
             </div>
-            <div class="customer__card-quote">
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, nulla corporis voluptatibus temporibus
-                nihil ad!
-                Nesciunt hic tempore quas molestias.</p>
-            </div>
-          </div>
 
-          <div class="customer__card">
-            <div class="customer__card-profile">
-              <div class="customer__card-img">
-                <img src="" alt="">
+            <div class="customer__card">
+              <div class="customer__card-profile">
+                <div class="customer__card-img">
+                  <img src="" alt="">
+                </div>
+                <div class="customer__card-id">
+                  <h4>John Doe</h4>
+                  <p>Lorem, ipsum dolor.</p>
+                </div>
               </div>
-              <div class="customer__card-id">
-                <h4>John Doe</h4>
-                <p>Lorem, ipsum dolor.</p>
+              <div class="customer__card-quote">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, nulla corporis voluptatibus
+                  temporibus
+                  nihil ad!
+                  Nesciunt hic tempore quas molestias.</p>
               </div>
             </div>
-            <div class="customer__card-quote">
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, nulla corporis voluptatibus temporibus
-                nihil ad!
-                Nesciunt hic tempore quas molestias.</p>
-            </div>
-          </div>
 
-          <div class="customer__card">
-            <div class="customer__card-profile">
-              <div class="customer__card-img">
-                <img src="" alt="">
+            <div class="customer__card">
+              <div class="customer__card-profile">
+                <div class="customer__card-img">
+                  <img src="" alt="">
+                </div>
+                <div class="customer__card-id">
+                  <h4>Jane Doe</h4>
+                  <p>Lorem, ipsum dolor.</p>
+                </div>
               </div>
-              <div class="customer__card-id">
-                <h4>Jane Doe</h4>
-                <p>Lorem, ipsum dolor.</p>
+              <div class="customer__card-quote">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, nulla corporis voluptatibus
+                  temporibus
+                  nihil ad!
+                  Nesciunt hic tempore quas molestias.</p>
               </div>
             </div>
-            <div class="customer__card-quote">
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, nulla corporis voluptatibus temporibus
-                nihil ad!
-                Nesciunt hic tempore quas molestias.</p>
-            </div>
-          </div>
 
-          <div class="customer__card">
-            <div class="customer__card-profile">
-              <div class="customer__card-img">
-                <img src="" alt="">
+            <div class="customer__card">
+              <div class="customer__card-profile">
+                <div class="customer__card-img">
+                  <img src="" alt="">
+                </div>
+                <div class="customer__card-id">
+                  <h4>John Doe</h4>
+                  <p>Lorem, ipsum dolor.</p>
+                </div>
               </div>
-              <div class="customer__card-id">
-                <h4>John Doe</h4>
-                <p>Lorem, ipsum dolor.</p>
+              <div class="customer__card-quote">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, nulla corporis voluptatibus
+                  temporibus
+                  nihil ad!
+                  Nesciunt hic tempore quas molestias.</p>
               </div>
             </div>
-            <div class="customer__card-quote">
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, nulla corporis voluptatibus temporibus
-                nihil ad!
-                Nesciunt hic tempore quas molestias.</p>
-            </div>
-          </div>
 
-          <div class="customer__card">
-            <div class="customer__card-profile">
-              <div class="customer__card-img">
-                <img src="" alt="">
+            <div class="customer__card">
+              <div class="customer__card-profile">
+                <div class="customer__card-img">
+                  <img src="" alt="">
+                </div>
+                <div class="customer__card-id">
+                  <h4>John Doe</h4>
+                  <p>Lorem, ipsum dolor.</p>
+                </div>
               </div>
-              <div class="customer__card-id">
-                <h4>John Doe</h4>
-                <p>Lorem, ipsum dolor.</p>
+              <div class="customer__card-quote">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, nulla corporis voluptatibus
+                  temporibus
+                  nihil ad!
+                  Nesciunt hic tempore quas molestias.</p>
               </div>
             </div>
-            <div class="customer__card-quote">
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse, nulla corporis voluptatibus temporibus
-                nihil ad!
-                Nesciunt hic tempore quas molestias.</p>
-            </div>
-          </div>
 
-        </div>
+          </div>
         </div>
 
         <div class="hero__slide-btn-container flex customer__card-btn">
@@ -423,6 +431,7 @@
 
       </div>
     </section>
+
   </main>
 
   <footer class="footer">
