--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <li>WhatAs</li>
           </ul>
         </div>
-        <img class="mobile__nav-logo" src="/redemptionlogo1.png" alt="">
+        <img class="mobile__nav-logo" src="/logo.svg" alt="">
       </nav>
       <div class="nav__socials">
         <a href="">insta</a>
@@ -79,6 +79,7 @@
   </header>
 
   <main class="main">
+
     <section class="section hero__section">
       <div class="container hero__section-container">
         <h1 class="hero__section-title mobile__hero-title ">
@@ -98,12 +99,12 @@
 
           <div class="hero__section-slider">
             <!-- <span class="">1</span> -->
-            <div class="hero__section-slides active">
+            <div class="hero__section-slides one active">
               <h1 class="hero__section-title ">
                 Donnez la priorite a votre sante et a votre bien-etre!
               </h1>
             </div>
-            <div class="hero__section-slides">
+            <div class="hero__section-slides two">
               <h1 class="hero__section-title">
                 Sante.
               </h1>
@@ -111,7 +112,7 @@
                 repellat minus doloribus soluta alias itaque nemo pariatur fuga hic ut, beatae quam sunt eligendi iste
                 totam cum laboriosam.</p>
             </div>
-            <div class="hero__section-slides">
+            <div class="hero__section-slides three">
               <h1 class="hero__section-title">
                 Bien-Etre.
               </h1>
