Fix and add styles

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <span>
               <h4 class="card__title">Soins generaux</h4>
               <p Lorem class="card__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, possimus.</p>
-              <a class="card__link" href="#">Read more</a>
+              <a class="card__link middle" href="#">Read more</a>
             </span>
           </div>
 
@@ -261,6 +261,8 @@
       </div>
     </section>
 
+
+    
     <section class="section">
       <div class="container customer__section">
         <div class="flex center service__title">
@@ -416,10 +418,10 @@
         </div>
 
         <div class="hero__slide-btn-container flex customer__card-btn">
-          <button class="hero__section-slider-btn customer__prev">
+          <button class="customer__prev">
             <i class="fa-solid fa-chevron-left"></i>
           </button>
-          <button class="hero__section-slider-btn customer__next">
+          <button class="customer__next">
             <i class="fa-solid fa-chevron-right"></i>
           </button>
         </div>
