--- a/index.html
+++ b/index.html
@@ -438,9 +438,20 @@
   </main>
 
   <footer class="footer">
-    <div class="container">
-      <div class="">
-
+    <div class="container footer__container">
+      <ul class="footer__list">
+         <li>links</li>
+         <li>links</li>
+         <li>links</li>
+      </ul>
+      
+      <div class="newsletter">
+        <h3>Newsletter</h3>
+        <p>Lorem ipsum dolor sit amet, officia excepteur ex fugiat.</p>
+        <form class="newsletter__form">
+          <input type="" name="" value="">
+          <button class="newsletter__form-btn">Send</button>   
+        </form>
       </div>
     </div>
   </footer>
