Fix hero and nav style

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h2 class="nav__title">Navigation</h2>
         <ul class="nav__list flex">
           <li class="nav__list-item flex">
-            <a href="" class="nav__list-links">Page d'accueil</a>
+            <a href="#" class="nav__list-links">Page d'accueil</a>
             <img src="/arrow-right-3098.png" alt="">
           </li>
           <li class="nav__list-item flex">
@@ -31,7 +31,7 @@
             <img src="/arrow-right-3098.png" alt="">
           </li>
           <li class="nav__list-item flex">
-            <a href="" class="nav__list-links">A propos de nous</a>
+            <a href="#about__us" class="nav__list-links">A propos de nous</a>
             <img src="/arrow-right-3098.png" alt="">
           </li>
         </ul>
@@ -49,8 +49,9 @@
 
           <ul class="nav__contacts-right">
             <h4>Socials</h4>
-            <li>Insta</li>
-            <li>WhatAs</li>
+            <li>Instagram</li>
+            <li>Whatsapp</li>
+            <li>FaceBook</li>
           </ul>
         </div>
         <img class="mobile__nav-logo" src="/logo.svg" alt="">
@@ -199,7 +200,7 @@
       </div>
     </section>
 
-    <section class="section">
+    <section class="section" id="about__us">
       <div class="staff__section flex">
         <div class="flex center service__title">
           <div class="container">
